chaper 2 and home page added

--- a/.docusaurus/client-manifest.json
+++ b/.docusaurus/client-manifest.json
@@ -57,6 +57,10 @@
     "935f2afb": [
       581
     ],
+    "9dd8a0d2": [
+      869,
+      617
+    ],
     "9f15a361": [
       869,
       35
@@ -84,6 +88,9 @@
       869,
       980
     ],
+    "e9f21092": [
+      103
+    ],
     "eec94de5": [
       907
     ],
@@ -106,6 +113,7 @@
       354,
       401,
       591,
+      617,
       661,
       729,
       791,
@@ -151,6 +159,15 @@
           "file": "assets/js/a7bd4aaa.89a473f9.js",
           "hash": "81faf50e2e1913c8",
           "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/a7bd4aaa.89a473f9.js"
+        }
+      ]
+    },
+    "103": {
+      "js": [
+        {
+          "file": "assets/js/e9f21092.bcc7fbe2.js",
+          "hash": "33d12efee4f2b489",
+          "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/e9f21092.bcc7fbe2.js"
         }
       ]
     },
@@ -211,9 +228,9 @@
     "354": {
       "js": [
         {
-          "file": "assets/js/runtime~main.dde77f86.js",
-          "hash": "72416a2a136ba5d9",
-          "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/runtime~main.dde77f86.js"
+          "file": "assets/js/runtime~main.62f111a0.js",
+          "hash": "5bbe4f7d673cd10d",
+          "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/runtime~main.62f111a0.js"
         }
       ]
     },
@@ -241,6 +258,15 @@
           "file": "assets/js/beba9a9e.088b390e.js",
           "hash": "78739d9565084b92",
           "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/beba9a9e.088b390e.js"
+        }
+      ]
+    },
+    "617": {
+      "js": [
+        {
+          "file": "assets/js/9dd8a0d2.8e5227c4.js",
+          "hash": "dda236983b720e0b",
+          "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/9dd8a0d2.8e5227c4.js"
         }
       ]
     },
@@ -283,18 +309,18 @@
     "792": {
       "js": [
         {
-          "file": "assets/js/main.77e78f85.js",
-          "hash": "485bdc9e7ff67c0f",
-          "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/main.77e78f85.js"
+          "file": "assets/js/main.6d79a666.js",
+          "hash": "2479b2b302d9c34d",
+          "publicPath": "/physical-ai-humanoid-robotics-future/assets/js/main.6d79a666.js"
         }
       ]
     },
     "869": {
       "css": [
         {
-          "file": "assets/css/styles.bd098529.css",
-          "hash": "eab31ad20c81d3d9",
-          "publicPath": "/physical-ai-humanoid-robotics-future/assets/css/styles.bd098529.css"
+          "file": "assets/css/styles.5a5a4ccb.css",
+          "hash": "327b5b23ec87d50e",
+          "publicPath": "/physical-ai-humanoid-robotics-future/assets/css/styles.5a5a4ccb.css"
         }
       ]
     },
